# CapstoneOmni

./: README.md
capstone_omni/: README.md
capstone_omni/omni_description/urdf/: omni.robot.xml  omni.xacro
capstone_omni/phantom_demos/: CMakeLists.txt  package.xml
capstone_omni/phantom_demos/include/: phantom.hpp
capstone_omni/phantom_demos/include/phantom_demos/: demo.h
capstone_omni/phantom_demos/launch/: omni.launch
capstone_omni/phantom_demos/rviz/: phantom.rviz
capstone_omni/phantom_demos/scripts/: bullet.py  collib.py  get_joint_limits.py  pr2_control.py  set_force.py
capstone_omni/phantom_demos/src/: demo.cpp  phantom_node.cpp  scale_tf_node.cpp  spring_node.cpp
